test/functions/resolution/errors/testBadCallCandidates.7.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:94: error: unresolved call 'owned C.baz(42)'
testBadCallCandidates.chpl:39: note: this candidate did not match: D.baz(x: C)
testBadCallCandidates.chpl:94: note: because method call receiver with type 'owned C'
testBadCallCandidates.chpl:32: note: is passed to formal 'this: borrowed D'
note: there is also 1 other candidate, use --print-all-candidates to see it
